# python-cdl

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: API_DOCUMENTATION.md  HIVE_MIND_FINAL_REPORT.md  RESEARCH_SUMMARY.md  VAV_REHEAT_TEST_SUMMARY.md  cdl-json-format-details.md  python-implementation-strategy.md  research-cdl-specification.md  vav_reheat_architecture.md
docs/architecture/: ARCHITECTURE_SUMMARY.md  execution-context-design.md  module-structure.md  pydantic-models-design.md  validation-strategy-design.md
docs/examples/: vav_reheat_summary.md
docs/reference_data/: OBC_REFERENCE_DATA_CATALOG.md
examples/: EXAMPLE_SUMMARY.md  README.md  block_visualization.ipynb  cdl_controller_simulation.ipynb  composite_block_execution.ipynb  p_controller_limiter.json
examples/programmatic_composition/: README.md  room_control_system.py  simple_temperature_controller.py  tutorial.ipynb  utils.py
examples/vav_reheat/: IMPLEMENTATION_SUMMARY.md  README.md  TUTORIAL_SUMMARY.md  __init__.py  ahu_controller.py  control_sequences.py  corridor_controller.json  east_controller.json  example_usage.py  main_example.py  north_controller.json  south_controller.json  test_zone_controller.py  tutorial.ipynb  west_controller.json  zone_controller.py  zone_models.py
src/python_cdl/: __init__.py
tests/: IMPLEMENTATION_NOTE.md  README.md  TESTING_GUIDE.md  TEST_INVENTORY.md  TEST_REPORT.md  __init__.py  conftest.py  test_basic_functionality.py
tests/compliance/: __init__.py  test_cdl_standard.py
tests/fixtures/: boolean_logic.json  composite_hvac.json  (+6 more)
(+56 files in other folders)
