[project]
name = "python-cdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Rodgers", email = "andrew@aceiotsolutions.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.2",
    "rdflib>=7.2.1",
]

[project.scripts]
python-cdl = "python_cdl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.2.0",
    "pint>=0.24.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.0",
    "scipy>=1.14.0",
]
